@@ -13,7 +13,6 @@
 void
 testTortureExecute (void)
 {
-#ifndef SDCC_gbz80
   char A[30], B[30], C[30];
   int i;
 
@@ -36,6 +35,7 @@ testTortureExecute (void)
 
   /* compare results */
   if (memcmp(A, C, 30) || memcmp(B, C, 30)) ASSERT(0);
+
   return;
-#endif
 }
+
